# raytrace-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
scenes/: balls.yml  bunny.yml  cube.yml  default.yml  dragon.yml  glass.yml  mesh.yml  minimal.yml  models.yml  monkey.yml  monkeys.yml
src/: algebra.rs  color.rs  geometric.rs  light.rs  main.rs  material.rs  math.rs  render.rs  scene.rs  timer.rs
