[package]
name = "raytrace-rs"
version = "0.1.0"
authors = ["timvisee <tim@visee.me>"]
edition = "2018"

[dependencies]
derive_builder = "0.7"
image = "0.22"
lazy_static = "1.4"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
rayon = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
