[package]
name = "raytrace-rs"
version = "0.1.0"
authors = ["timvisee <tim@visee.me>"]
edition = "2018"

[dependencies]
clap = "2.33"
image = "0.22"
lazy_static = "1.4"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
notify = "4.0"
num_cpus = "1.10"
open = "1.3"
rayon = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
